--- a/Magento_Theme/templates/html/cart/cart-drawer.phtml
+++ b/Magento_Theme/templates/html/cart/cart-drawer.phtml
@@ -157,13 +157,13 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 
                     <?= $block->getChildHtml('cart-drawer.items.before'); ?>
 
-                    <template x-if="!cart.itemsCount">
+                    <template x-if="!itemsCount">
                         <div class="relative px-4 py-6 bg-white border-bs sm:px-6 border-container">
                             <?= $escaper->escapeHtml(__('There are no items in your cart.')) ?>
                         </div>
                     </template>
 
-                    <template x-if="cart.itemsCount">
+                    <template x-if="itemsCount">
                         <div>
                             <div class="relative grid gap-6 px-4 py-6 overflow-y-auto bg-white border-b
                         sm:gap-8 sm:px-6 border-container">
