Set isOpen to false in closeCartDrawer function

--- a/Magento_Theme/templates/html/cart/cart-drawer.phtml
+++ b/Magento_Theme/templates/html/cart/cart-drawer.phtml
@@ -40,6 +40,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                     this.totalCartAmount = this.cart.summary_count;
                     this.setCartItems();
                 }
+                console.log('setting isloading false');
                 this.isLoading = false;
             },
             cartItems: [],
@@ -87,10 +88,11 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                             : result.error_message
                     }], result.success ? 5000 : 0)
                     window.dispatchEvent(new CustomEvent('reload-customer-section-data'));
+                    console.log('result ok, dispatched reload message');
                 });
             },
             closeCartDrawer() {
-                this.$dispatch('toggle-cart', { isOpen: this.open === 1 })
+                this.$dispatch('toggle-cart', { isOpen: false })
             }
         }
     }
