--- a/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/viewmode.phtml
@@ -30,7 +30,7 @@ use Magento\Framework\Escaper;
                         role="checkbox"
                         aria-checked="true"
                         data-value="<?= $escaper->escapeHtmlAttr(strtolower($code)) ?>"
-                        aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode') . ' - ' . $label) ?>"
+                        aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode - %1', $label)) ?>"
                     >
                         <span><?= $escaper->escapeHtml($label) ?></span>
                     </strong>
@@ -48,7 +48,7 @@ use Magento\Framework\Escaper;
                         data-value="<?= $escaper->escapeHtmlAttr(strtolower($code)) ?>"
                         role="checkbox"
                         aria-checked="false"
-                        aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode') . ' - ' . $label) ?>"
+                        aria-label="<?= $escaper->escapeHtmlAttr(__('Products view mode - %1', $label)) ?>"
                     >
                         <span><?= $escaper->escapeHtml($label) ?></span>
                     </button>
