Set type for variable $block

--- a/Magento_Catalog/templates/product/price/amount/default.phtml
+++ b/Magento_Catalog/templates/product/price/amount/default.phtml
@@ -5,9 +5,11 @@
  * This product is licensed per Magento install
  * See https://hyva.io/license
  */
-?>
 
-<?php /** @var Type $block */ ?>
+use Magento\Framework\Pricing\Render\Amount;
+
+/** @var Amount $block */
+?>
 
 <span
     <?php if ($block->getPriceId()) :?>x-data x-id="['<?= $block->escapeJs($block->getPriceId()) ?>']"<?php endif; ?>
