--- a/Magento_Theme/templates/html/header/menu/mobile.phtml
+++ b/Magento_Theme/templates/html/header/menu/mobile.phtml
@@ -54,7 +54,11 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
         );?>
     </button>
     <div
-        class="fixed top-0 right-0 w-full h-full p-1 flex flex-col border-t border-container bg-container-lighter"
+        class="
+            fixed top-0 right-0 w-full h-full p-1 flex
+            flex-col border-t border-container bg-container-lighter
+            overflow-y-auto overflow-x-hidden
+        "
         :class="{ 'hidden' : !open }"
         :aria-hidden="open ? 'false' : 'true'"
         role="dialog"
@@ -110,7 +114,7 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                             x-init="trapFocus($el)"
                             class="absolute top-0 right-0 z-10 flex flex-col gap-1 w-full h-full p-1 bg-container-lighter"
                             :class="{
-                                'invisible': mobilePanelActiveId !== '<?= /* @noEscape */ (string) $index ?>'
+                                'hidden': mobilePanelActiveId !== '<?= /* @noEscape */ (string) $index ?>'
                             }"
                         >
                             <ul
