Update product-list identifier in anchor link

--- a/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -72,7 +72,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
         >
             <?= $block->getChildHtml('state') ?>
             <a
-                href="#products-list"
+                href="#product-list"
                 class="sr-only focus:not-sr-only bg-blue-600 text-white px-12 py-4 text-center block rounded-sm"
             >
                 <?= $escaper->escapeHtml(__('Skip to product list')) ?>
