--- a/Magento_Wishlist/templates/sidebar.phtml
+++ b/Magento_Wishlist/templates/sidebar.phtml
@@ -139,7 +139,7 @@ $heroiconsOutline = $viewModels->require(HeroiconsOutline::class);
                                             type="button"
                                             @click.prevent="addToCart(product.add_to_cart_params)"
                                             class="action tocart primary btn btn-primary text-sm"
-                                            :aria-label="hyva.str('<?= $escaper->escapeJs(__('Add to cart product "%1"'))  ?>', product.product_name)"
+                                            :aria-label="hyva.str('<?= $escaper->escapeJs(__('Add to cart %1'))  ?>', product.product_name)"
                                         >
                                             <?= $escaper->escapeHtml(__('Add to cart')) ?>
                                         </button>
