#738 Refactor method name to be more expressive

--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -227,7 +227,7 @@ $currentProduct = $viewModels->require(CurrentProduct::class);
                     ? this.optionConfig.optionPrices[cheapestForSelection].finalPrice.amount
                     : this.optionConfig.prices.finalPrice.amount; // default price if no option selection
             },
-            clearOption(optionId, value) {
+            clearOptionIfActive(optionId, value) {
                 if (this.selectedValues[optionId] === value) {
                     this.blurLabel()
                     this.changeOption(optionId, '')
