FIX: invisible active item by scrolling to it

--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -227,10 +227,13 @@ $productName = $block->getProduct()->getName();
                     const initialUrls = this.initialImages.map(image => image.full);
                     const newImages = images.filter(image => ! initialUrls.includes(image.full));
                     this.images = [].concat(this.initialImages, newImages);
-                    this.setActive(newImages.length ? this.initialImages.length : 0);
+                    const newActive = newImages.length ? this.initialImages.length : 0;
+                    this.setActive(newActive);
+                    this.scrollTo(newActive);
                 } else {
                     this.images = images;
                     this.setActive(0);
+                    this.scrollTo(0);
                 }
             },
             resetGallery() {
