Add backwards compatibility notice to header menu

--- a/Magento_Customer/templates/header/customer-menu.phtml
+++ b/Magento_Customer/templates/header/customer-menu.phtml
@@ -6,6 +6,13 @@
  * See https://hyva.io/license
  */
 
+/**
+ * Notice: this template is retained for backwards compatibility only.
+ *
+ * New implementations should utilize customer-menu-itemized.phtml which allows
+ * for better extensibility and granular control of menu items and their position.
+ */
+
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
