IMP: make sure the label does not wrap if there is a special price

--- a/Magento_Msrp/templates/popup.phtml
+++ b/Magento_Msrp/templates/popup.phtml
@@ -48,11 +48,11 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
             <div class="mb-4 text-sm">
                 <dl class="price-box">
                     <div class="flex gap-2">
-                        <dt class="font-semibold"><?= $escaper->escapeHtml(__('Price')) ?>:</dt>
+                        <dt class="font-semibold whitespace-nowrap"><?= $escaper->escapeHtml(__('Price')) ?>:</dt>
                         <dd x-html="msrpPrice"></dd>
                     </div>
                     <div class="flex gap-2">
-                        <dt class="font-semibold"><?= $escaper->escapeHtml(__('Actual Price')) ?>:</dt>
+                        <dt class="font-semibold whitespace-nowrap"><?= $escaper->escapeHtml(__('Actual Price')) ?>:</dt>
                         <dd x-html="actualPrice"></dd>
                     </div>
                 </dl>
