--- a/Magento_Msrp/templates/popup.phtml
+++ b/Magento_Msrp/templates/popup.phtml
@@ -32,7 +32,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
         x-transition:enter="transition ease-out duration-300 opacity-0 translate-y-full lg:-translate-y-0"
         x-transition:enter-end="transition ease-out duration-300 opacity-100 translate-y-0"
         x-transition:leave="transition ease-in duration-150 opacity-0 translate-y-full lg:-translate-y-0"
-        @click.outside="closePopover()"
+        @click.outside="closePopover($event)"
         @msrp-popover.window="showPopover($event.detail)"
         @resize.window.debounce="closePopover()"
         @keydown.window.escape="closePopover()"
@@ -66,7 +66,6 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                 return {
                     open: false,
                     type: "price", // price or help
-                    typeChange: false,
                     title: '',
                     content: '<?= $escaper->escapeHtml($block->getExplanationMessage(), ["br"]) ?>',
                     isSaleable: false,
@@ -96,24 +95,15 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                             : `${(pageLeft - (this.$root.offsetWidth - target.offsetWidth))}px`;
                         this.position = [positionBlock, positionInline]
                     },
-                    closePopover() {
-                        if (this.typeChange) {
-                            this.typeChange = false;
-                            return;
-                        };
-
+                    closePopover(event) {
+                        if (event && event.target === this.anchor) return;
                         this.open = false;
                     },
                     showPopover(event) {
                         const data = event.msrpData;
                         if (!data) return;
 
-                        this.open = !this.open;
-                        if (data.type !== this.type) {
-                            this.typeChange = true;
-                            this.open = true;
-                        }
-
+                        this.open = true;
                         this.type = data.type;
                         this.productId = data.id;
                         this.isSaleable = data.isSaleable;
