Add missing child container to account dashboard

--- a/Magento_Customer/templates/account/dashboard/info.phtml
+++ b/Magento_Customer/templates/account/dashboard/info.phtml
@@ -107,4 +107,5 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
             </div>
         </div>
     <?php endif; ?>
+    <?= $block->getChildHtml('additional_blocks'); ?>
 </div>
