--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -8,10 +8,12 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\ViewModel\StoreConfig;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\HeroiconsOutline;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
+use Magento\Checkout\Block\Cart\Sidebar;
 
 /** @var Escaper $escaper */
 /** @var Template $block */
@@ -20,9 +22,9 @@ use Magento\Framework\View\Element\Template;
 /** @var HeroiconsOutline $heroicons */
 $heroicons = $viewModels->require(HeroiconsOutline::class);
 
-/** @var Hyva\Theme\ViewModel\StoreConfig $storeConfig */
-$storeConfig = $viewModels->require(Hyva\Theme\ViewModel\StoreConfig::class);
-$showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sidebar::XML_PATH_CHECKOUT_SIDEBAR_DISPLAY);
+/** @var StoreConfig $storeConfig */
+$storeConfig = $viewModels->require(StoreConfig::class);
+$showMiniCart = $storeConfig->getStoreConfig(Sidebar::XML_PATH_CHECKOUT_SIDEBAR_DISPLAY);
 ?>
 <script>
     function initHeader () {
