ADD: scrolllock and resize helper to watch

--- a/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/Magento_Catalog/templates/product/view/gallery.phtml
@@ -221,6 +221,16 @@ $productName = $block->getProduct()->getName();
             init() {
                 this.initActive();
                 this.$nextTick(() => this.calcPageSize());
+
+                this.$watch('fullscreen', open => {
+                    this.$nextTick(() => {
+                        this.scrollLock(open);
+
+                        window.requestAnimationFrame(() => {
+                            this.calcPageSize()
+                        });
+                    });
+                })
             },
             receiveImages(images) {
                 if (this.appendOnReceiveImages) {
