--- a/Magento_Checkout/templates/php-cart/item/default.phtml
+++ b/Magento_Checkout/templates/php-cart/item/default.phtml
@@ -101,7 +101,7 @@ $isVisibleProduct = $product->isVisibleInSiteVisibility();
                                step="any"
                                title="<?= $escaper->escapeHtmlAttr(__('Qty')) ?>"
                                class="qty form-input px-2 py-2 w-20 text-center"
-                               required="required"
+                               required
                                min="0"
                                data-role="cart-item-qty"/>
                     </label>
