IMP: use CSS for required icon in label
The html solution works but required to much updates and will not play wel with modules that already use the CSS class based on the luma version, only difference for us, we use a CSS icon to prevent any voice over issues

--- a/web/tailwind/theme/components/style/forms.css
+++ b/web/tailwind/theme/components/style/forms.css
@@ -50,3 +50,9 @@ fieldset {
 fieldset ~ fieldset {
     @apply mt-8
 }
+
+.field.required {
+    & > label::after {
+        @apply content-[""] relative -top-1 text-red-600 icon-asterisk;
+    }
+}
