--- a/Magento_Customer/templates/address/edit.phtml
+++ b/Magento_Customer/templates/address/edit.phtml
@@ -77,7 +77,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
         <div class="md:grid grid-cols-2 gap-x-4 gap-y-0">
             <div class="street w-full">
 
-                <div class="field field-reserved">
+                <div class="field field-reserved required">
                     <label for="street_1" class="label">
                         <span><?= /* @noEscape */ $streetLabel ?></span>
                     </label>
@@ -128,7 +128,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                     </div>
                 </div>
             <?php endif; ?>
-            <div class="field field-reserved zip w-full">
+            <div class="field field-reserved zip w-full" :class="{ 'required': isZipRequired }">
                 <label class="label" for="zip">
                     <span>
                         <?= /* @noEscape */ $block->getAttributeData()->getFrontendLabel('postcode') ?>
@@ -148,7 +148,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                 </div>
             </div>
 
-            <div class="field field-reserved city w-full">
+            <div class="field field-reserved required city w-full">
                 <label class="label" for="city">
                 <span><?= /* @noEscape */ $block->getAttributeData()->getFrontendLabel('city') ?></span>
                 </label>
@@ -164,7 +164,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                 </div>
             </div>
 
-            <div class="field field-reserved country w-full">
+            <div class="field field-reserved required country w-full">
                 <label class="label" for="country">
                     <span>
                         <?= /* @noEscape */ $block->getAttributeData()->getFrontendLabel('country_id') ?>
@@ -198,9 +198,11 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                 </div>
             </div>
 
-            <div class="field field-reserved region w-full"
-                 x-cloak
-                 x-show="(hasAvailableRegions() && isRegionRequired) || showOptionalRegions"
+            <div
+                class="field field-reserved region w-full"
+                x-cloak
+                x-show="(hasAvailableRegions() && isRegionRequired) || showOptionalRegions"
+                :class="{ 'required': isRegionRequired }"
             >
                 <label class="label" for="region_id">
                     <span><?= /* @noEscape */ $regionLabel ?></span>
