--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -195,13 +195,16 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                             </span>
                         </button>
                         <div class="flex flex-row justify-start items-center w-full"
-                             x-show="isLoading" x-cloak>
+                             x-show="isLoading" 
+                             x-cloak>
                             <?= $hyvaicons->loaderHtml('text-primary', 57, 57); ?>
                             <div class="ml-4 text-primary">
                                 <?= $escaper->escapeHtml(__('Loading...')) ?>
                             </div>
                         </div>
-                        <p x-show="displaySuccessMessage" x-cloak class="text-green flex items-center">
+                        <p x-show="displaySuccessMessage" 
+                           x-cloak 
+                           class="text-green flex items-center">
                             <span class="inline-block w-8 h-8 mr-3">
                                 <?= $heroicons->checkCircleHtml(); ?>
                             </span>
