--- a/Magento_Swatches/templates/product/layered/renderer.phtml
+++ b/Magento_Swatches/templates/product/layered/renderer.phtml
@@ -96,7 +96,7 @@ $swatchData = $block->getSwatchData();
             <a
                 href="<?= $escaper->escapeUrl($label['link']) ?>" rel="nofollow"
                 aria-label="<?= $escaper->escapeHtmlAttr(__('Filter %1 %2', $swatchData['attribute_label'], $label['label'])) ?>"
-                class="swatch-option-link-layered swatch-option border-2 cursor-pointer bg-container-lighter shadow-sm relative select-none border-container-darker <?= $isVisualSwatch ? 'w-6 h-6' : 'min-w-16' ?>"
+                class="swatch-option-link-layered swatch-option border-2 cursor-pointer bg-container-lighter shadow-sm relative select-none border-container-darker <?= $isVisualSwatch ? 'w-6 h-6' : '' ?>"
                 <?php if($isVisualSwatch): ?>
                     style="background: <?= $swatchType === '2'
                         ? $escaper->escapeUrl($block->getSwatchPath('swatch_image', $swatchValue))
